--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
    <body>
     
 
-    <div id="main-screen">
-      <img src="splashscreen.png">
-      <div class="select"></div>
+    <div id="mainscreen">
+      <img src="quizquest.png">
+      <div id="start-game" class="menu-item">Start game</div>
     </div>
-    <div id="standard-level">
+    <div id="standardlevel">
     </div>
 
     <script src="game.js"></script>
