--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <img src="quizquest.png">
       <div id="start-game" class="menu-item">Start game</div>
     </div>
+    <div id="mapscreen"></div>
     <div id="standardlevel">
     </div>
 
