--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
   <head>
     <!-- Pull the engine from the Quintus CDN or load it locally -->
     <!-- (use quintus-all.min.js for production) -->
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <script src="TweenMax.js"></script>
     <script src="jquery.js"></script>
+    <script src="hammer.js"></script>
+    <script src="jquery.hammer.js"></script>
     <link rel="stylesheet" href="stylesheets/screen.css">
   </head>
    <body>
     
-
+    <div id="titlefield"></div>
     <div id="mainscreen">
       <img src="quizquest.png">
       <div id="start-game" class="menu-item">Start game</div>
@@ -16,7 +19,7 @@
     <div id="mapscreen"></div>
     <div id="standardlevel">
     </div>
-
+    <script src="maps.js"></script>
     <script src="game.js"></script>
    </body>
 </html>
