--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div id="mapscreen"></div>
     <div id="standardlevel">
+      <div class="ground"></div>
     </div>
     <script src="maps.js"></script>
     <script src="game.js"></script>
