--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
   </head>
    <body>
     
-    <div id="titlefield"></div>
     <div id="mainscreen">
       <div id="start-game" class="menu-item">Start game</div>
     </div>
-    <div id="mapscreen"></div>
-    <div id="standardlevel">
-      <div class="ground"></div>
+
+    <div id="levelContainer">
     </div>
-    <script src="maps.js"></script>
+    
+    <script src="levels.js"></script>
     <script src="game.js"></script>
    </body>
 </html>
