--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
     <link rel="stylesheet" href="stylesheets/screen.css">
   </head>
    <body>
-    
-    <div id="mainscreen">
-      <div id="start-game" class="menu-item">Start game</div>
-    </div>
+    <div id="mobile-wrapper">
+      <div id="mainscreen">
+        <div id="start-game" class="menu-item">Start game</div>
+      </div>
 
-    <div id="levelContainer">
+      <div id="levelContainer">
+      </div>
+      <div id="bottom-container">
+        <div id="lives"></div>
+        <div id="score"><span>SCORE </span><span id="scoreinput"></span></div>
+      </div>
     </div>
-    
     <script src="levels.js"></script>
     <script src="game.js"></script>
    </body>
