--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
       <div id="levelContainer">
       </div>
-      <div id="bottom-container">
+      <div id="bottomContainer">
         <div id="lives"></div>
-        <div id="score"><span>SCORE </span><span id="scoreinput"></span></div>
+        <div id="score"><span>SCORE </span><span id="scoreinput">0</span></div>
       </div>
     </div>
     <script src="levels.js"></script>
