--- a/www2/index.html
+++ b/www2/index.html
@@ -10,6 +10,7 @@
     <script src="hammer.js"></script>
     <script src="jquery.hammer.js"></script>
     <script src="nadb.js"></script>
+    <script src="underscore.js"></script>
     <link rel="stylesheet" href="stylesheets/screen.css">
   </head>
    <body>
@@ -144,16 +145,17 @@
           </div>
 
         </div>
-
-        <table class="highscore-table" id="highscore-table">
-          <tr class="table-header">
-            <th>#</th>
-            <th>brukernavn</th>
-            <th>poengsum</th>
-          </tr>
-          <tr class="table-body" id="highscore-body">
-          </tr>
-        </table>
+        <div class="highscore-wrapper">
+          <table class="highscore-table" id="highscore-table">
+            <tr class="table-header">
+              <th>#</th>
+              <th>brukernavn</th>
+              <th>poengsum</th>
+            </tr>
+            <tr class="table-body" id="highscore-body">
+            </tr>
+          </table>
+        </div>
       </div>
 
 
