--- a/www2/index.html
+++ b/www2/index.html
@@ -120,6 +120,18 @@
       </div>
       <!-- -->
 
+      <div id="yayContainer" class="screen">
+        <div class="bilboard">
+          <div class="screen-header-container">
+            <div id="yaycontainer-title" class="screen-header medium-size stagger">The fart deamons of fartonia</div>
+            <div class="screen-label stagger">- Jan</div>
+          </div>
+        </div>
+        <div class="screen-bottom-container">
+          <img src="img/retrojan-thumbs-up.png">
+        </div>
+      </div>
+
       <div id="bottomContainer">
         <div id="lives"></div>
         <div id="score"><span id="scoreinput">0</span></div>
